logs/INITools_pipbuild.log
Removing old build directory
Removing old work directory
BUILD START: initools-0.3.1-py_0
Fetching package metadata: ......

WARNING: conda-build appears to be out of date. You have version 1.13.0 but the
latest version is 1.14.0. Run

conda update -n root conda-build

to get the latest version.

Solving package specifications: .+ pip install INITools
Collecting INITools
  Downloading http://localhost/packages/source/I/INITools/INITools-0.3.1.tar.gz
Installing collected packages: INITools
  Running setup.py install for INITools
Successfully installed INITools-0.3.1
Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/initools/lazyloader.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/initools/lazyloader.py", line 190
    elif isinstance(item, Item):
       ^
SyntaxError: invalid syntax


The following NEW packages will be INSTALLED:

    openssl:    1.0.1k-1     
    pip:        7.0.3-py27_0 
    python:     2.7.10-0     
    readline:   6.2-2        
    setuptools: 18.0.1-py27_0
    sqlite:     3.8.4.1-1    
    system:     5.8-2        
    tk:         8.5.18-0     
    zlib:       1.2.8-0      

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  11%[sqlite              ]|###########                                       |  22%[system              ]|################                                  |  33%[tk                  ]|######################                            |  44%[zlib                ]|###########################                       |  55%[python              ]|#################################                 |  66%[setuptools          ]|######################################            |  77%[pip                 ]|############################################      |  88%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Copying /home/ubuntu/pypi-conda-builds/initools to /home/ubuntu/miniconda/conda-bld/work
Package: initools-0.3.1-py_0
source tree in: /home/ubuntu/miniconda/conda-bld/work
compiling .pyc files...
Command failed: /home/ubuntu/miniconda/envs/_build/bin/python -Wi /home/ubuntu/miniconda/envs/_build/lib/python2.7/compileall.py -q -x port_v3 /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages
Package search: {'_pypi_ordering': False, 'version': '0.3.1', 'name': 'INITools', 'summary': 'Tools for parsing and using INI-style files'}
Creating standard recipe for initools-0.3.1
Converting recipe in /home/ubuntu/pypi-conda-builds/initools
package = INITools
   dependencies = []
Building conda package for initools
